# testaxiscv

./: .gitignore  CMakeLists.txt  README.md  main.cpp  update_and_build.sh
src/: main.cpp
